cmake_minimum_required(VERSION 3.13.4)
project(proj_exec)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../cmake_utils)

add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp)
include(project_specific)
configure_project_common()
if(hasParent)
  target_link_libraries(${PROJECT_NAME} PRIVATE proj_lib)
else()
  add_subdirectory(../proj_lib ${CMAKE_CURRENT_BINARY_DIR}/proj_lib)
  target_link_libraries(${PROJECT_NAME} PRIVATE proj_lib)
endif()
